# photometricGradient

./: CMakeLists.txt
include/photometricGradient/: DepthMapProgram.h  DepthMapXYZProgram.h  GradientCollectorProgram.h  GradientFlowProgram.h  Logger.h  NccGradientProgram.h  NccProgram.h  OpenGLProgram.h  PhotometricGradient.h  ReprojectionProgram.h  ShaderManager.h  ShaderProgram.h  TextureManager.h  types.hpp
shaders/: depthXYZ_fragment_shader.glsl  depthXYZ_geometry_shader.glsl  depthXYZ_vertex_shader.glsl  depth_vertex_shader.glsl  grad_coll_fragment_shader.glsl  grad_coll_geometry_shader.glsl  grad_coll_vertex_shader.glsl  grad_flow_depth_fragment_shader.glsl  grad_flow_depth_geometry_shader.glsl  grad_flow_depth_vertex_shader.glsl  id_grad_depth_vertex_shader.glsl  ncc_fragment_shader.glsl  ncc_geometry_shader.glsl  ncc_grad_fragment_shader.glsl  ncc_grad_vertex_shader.glsl  ncc_vertex_shader.glsl  reprojection_fragment_shader.glsl  reprojection_geometry_shader.glsl  reprojection_vertex_shader.glsl  sim_grad_fragment_shader.glsl  sim_grad_vertex_shader.glsl
src/: CMakeLists.txt  DepthMapProgram.cpp  DepthMapXYZProgram.cpp  GradientCollectorProgram.cpp  GradientFlowProgram.cpp  Logger.cpp  NccGradientProgram.cpp  NccProgram.cpp  OpenGLProgram.cpp  PhotometricGradient.cpp  ReprojectionProgram.cpp  ShaderManager.cpp  ShaderProgram.cpp  TextureManager.cpp
