include_directories(  ${photometricGradient_SOURCE_DIR}/include/photometricGradient ) 

add_library(depthMapProgram DepthMapProgram.cpp)
add_library(shaderProgram ShaderProgram.cpp)
add_library(textureManager TextureManager.cpp)
add_library(shaderManager ShaderManager.cpp)
add_library(openGLProgram OpenGLProgram.cpp)
add_library(reprojectionProgram ReprojectionProgram.cpp)
add_library(nccProgram NccProgram.cpp)
add_library(photometricGradient PhotometricGradient.cpp)
target_link_libraries( photometricGradient depthMapProgram shaderProgram textureManager reprojectionProgram nccProgram ${GLM_LIBRARIES})
target_link_libraries( photometricGradient shaderProgram shaderManager openGLProgram nccProgram ${OpenCV_LIBS} )
target_link_libraries( photometricGradient shaderManager openGLProgram ${GLEW_LIBRARIES})
target_link_libraries( photometricGradient ${GLFW_LIBRARIES})
