include_directories(  ${PROJECT_SOURCE_DIR}/include/photometricGradient ) 

add_library(depthMapProgram DepthMapProgram.cpp)
add_library(depthMapXYZProgram DepthMapXYZProgram.cpp)
add_library(gradientCollectorProgram GradientCollectorProgram.cpp)
add_library(gradientFlowProgram GradientFlowProgram.cpp)
add_library(logger Logger.cpp) 
add_library(nccGradientProgram NccGradientProgram.cpp)
add_library(nccProgram NccProgram.cpp)
add_library(openGLProgram OpenGLProgram.cpp)
add_library(photometricGradient PhotometricGradient.cpp)
add_library(reprojectionProgram ReprojectionProgram.cpp)
add_library(shaderManager ShaderManager.cpp)
add_library(shaderProgram ShaderProgram.cpp)
add_library(textureManager TextureManager.cpp)
