add_library(photometricGradient DepthMapProgram.cpp DepthMapXYZProgram.cpp GradientCollectorProgram.cpp GradientFlowProgram.cpp Logger.cpp NccGradientProgram.cpp NccProgram.cpp OpenGLProgram.cpp PhotometricGradient.cpp ReprojectionProgram.cpp ShaderManager.cpp ShaderProgram.cpp TextureManager.cpp )
